--- a/style.css
+++ b/style.css
@@ -1,205 +1,19 @@
-<style type="text/css">
-<!-- /*<style id='page-skin-1' type='text/css'><!--
-/*
-------------------------
-Blogger Theme
-Name	 : Kompi Lyrics Blogger Template
-Version	 : 1.0
-Designer : Kompi Ajaib
-URL		 : www.kompiajaib.com
-------------------------
-Built With Bootstrap
-*/
-#header{width:auto;display:block}
-.contact,.sitemaps{display:none}
-.main-box .col-md-9{width:75%;float:left;}
-.main-box .col-md-4{width:33.33333333%;float:right;}
-.main-box .col-md-8{width:66.66666667%;float:right;}
-.main-box .col-md-3{width:25%;float:left;}
-ul,li{list-style: none;}
-*/
---></style>
-<style type='text/css'>
-/*<![CDATA[*/
-h2,h3{margin-top:0}
-a{color:#bc2929;}
-a:hover{color:#a21e1e;}
-a:active,a:focus,button.alert.alert-dismissible:active,button.alert.alert-dismissible:focus,button:active,button:focus{outline:0!important}
-#navbar-iframe{height:0;visibility:hidden;display:none}
-#main-wrapper{width:100%;height:auto;margin:0 auto;word-wrap:break-word;}
-#collapsePostBlog{padding-top:55px;padding-bottom:30px}
-.blog-overlay{opacity:0}
-body.pace-done .blog-overlay{opacity:1;}
-html{position:relative;min-height:100%}
-body{margin:0 auto 80px;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:14px;line-height:1.42857143;color:#333;background-color:#efefef}
-.header-wrapper{margin:0;padding:60px 0;background:#bc2929;border-bottom:1px solid #a21e1e}
-#header{width:100%;}
-.header h1,.header p{margin:10px 0 0;line-height:1.1}
-.header h1 a,.header p.title a{color:#fff;font-size:36px;font-weight:bold}
-.header p.description{margin:0;color:#fff}
-.search-box p{margin:0 0 5px;color:#fff}
-#sidebar-right{width:100%!important;}
-#sidebar-left h2,#sidebar-right h2,h2.heading-main{font-size:20px;margin-bottom:0;font-weight:bold;color:#333;}
-#sidebar-left .widget,#sidebar-right .widget{margin-bottom:15px;}
-a:hover{text-decoration:none}
-.navbar-default{background-color:#902020!important;border-color:#811e1e!important}
-.navbar-default .navbar-brand{color:#fff;}
-.navbar-default .navbar-brand:hover{color:#eee;}
-.navbar-menu{margin-top:-45px;}
-.nav-tabs>li>a{background-color:#e43131;color:#fff;font-weight:bold;font-size:16px;}
-.nav-tabs>li>a:hover,.nav-tabs>li>a:focus{color:#555;border-color:#eee}
-.nav-tabs{border-bottom:none;}
-.nav-tabs>li>a:focus{background-color:#eee!important;border: 1px solid transparent!important;}
-.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover{background-color:#eee;}
-img{border:0;width:auto;max-width:100%;height:auto}
-.footer{position:absolute;bottom:0;width:100%;height:auto;background-color:#f5f5f5;border-top:1px solid #dedede}
-.post h2.post-title{width:100%;padding:20px 0 10px;margin-bottom:10px;border-bottom:1px solid #dedede;text-align:center}
-.post-body{padding-top:20px}
-body>.container{padding:60px 15px 0}
-.navbar-default .navbar-nav>li>a{color:#fff!important;opacity:.8}
-.navbar-default .navbar-nav>li>a:hover{opacity:1;background-color:#ac2727!important;text-decoration:none}
-.navbar-default .navbar-toggle,.navbar-menu .navbar-toggle{border-color:#a21e1e!important;background-color:#bc2929;}
-.navbar-default .navbar-toggle .icon-bar,.navbar-menu .navbar-toggle .icon-bar{background-color:#fff!important;}
-.navbar-default .navbar-toggle:hover .icon-bar,.navbar-menu .navbar-toggle:hover .icon-bar{background-color:#888!important;}
-.navbar-default .navbar-collapse,.navbar-menu .navbar-collapse,.navbar-default .navbar-form{border-color:transparent!important;}
-.menuikon{display:none}
-.btn.disabled, .btn[disabled], fieldset[disabled] .btn {opacity:1;}
-h1.navbar-brand,h1.navbar-brand a,p.navbar-brand,p.navbar-brand a{margin-top:0;margin-bottom:0;color:#fff!important}
-h2{font-size:20px;margin-bottom:0}
-h3{font-size:14px}
-h3.date-header{font-size:12px;margin-bottom:0;color:#666}
-h3.date-header a{font-size:12px;color:#666;}
-.container .text-muted{margin:20px 0}
-.footer>.container{padding:25px 15px}
-code{font-size:80%}
-.close-copy{color:#fff!important;opacity:.8!important}
-.close-copy:hover{opacity:1!important}
-.six-sec-ease-in-out{-webkit-transition:width 14s ease-in-out;-moz-transition:width 14s ease-in-out;-ms-transition:width 14s ease-in-out;-o-transition:width 14s ease-in-out;transition:width 14s ease-in-out}
-#btnInfo{display:none}
-.margin-bottom-25{margin-bottom:25px}
-.margin-top-25{margin-top:25px}
-hr{margin-top:5px;margin-bottom:10px}
-button.alert.alert-dismissible{cursor:default}
-a:active,a:focus{background:0 0!important;text-decoration:none}
-a.btn-default:active,a.btn-default:focus{background-color:#e6e6e6!important;}
-#blog-pager{margin:1em 0;text-align:center;overflow: hidden;}
-#blog-pager-newer-link{font-weight:bold;font-size:16px;float:left}
-#blog-pager-older-link{font-weight:bold;font-size:16px;float:right}
-.home-link{font-size:16px;}
-.feed-links{clear:both;line-height:2.5em}
-
-/* Contact Form */
-#ContactForm1_contact-form-email,#ContactForm1_contact-form-name{width:100%;height:auto;margin:5px auto 15px;padding:10px 10px 10px 30px;color:#777;position:relative;z-index:1;background:#ebebeb;border:1px solid #ccc;border-radius:4px;box-shadow:rgba(0,0,0,.247059) 0 1px 3px inset,#f5f5f5 0 1px 0;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;}
-.contact-form-email,.contact-form-name{position:relative!important}
-.contact-form-email:before,.contact-form-name:before{font-family:FontAwesome;font-style:normal;font-weight:400;text-decoration:inherit;padding-right:.5em;position:absolute;top:-4px;left:10px;z-index:2;color:#777;font-size:16px}
-.contact-form-name:before{content:'\f007'}
-.contact-form-email:before{content:'\f0e0'}
-#ContactForm1_contact-form-email:focus,#ContactForm1_contact-form-name:focus{background:#fffff7;outline:0}
-#ContactForm1_contact-form-email-message{width:100%;height:100px;margin:5px auto;padding:10px 10px 10px 30px;background:url(https://4.bp.blogspot.com/-HcSDTEb_L30/VmLKc3f4juI/AAAAAAAAkDo/d2yC7S79OgM/s1600/pencil.png) 10px 12px no-repeat #ebebeb;color:#777;border:1px solid #ccc;border-radius:4px;box-shadow:rgba(0,0,0,.247059) 0 1px 3px inset,#f5f5f5 0 1px 0;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;font-weight:400}
-#ContactForm1_contact-form-email-message:focus{background:url(https://4.bp.blogspot.com/-HcSDTEb_L30/VmLKc3f4juI/AAAAAAAAkDo/d2yC7S79OgM/s1600/pencil.png) 10px 12px no-repeat #fffff7;outline:0}
-#ContactForm1_contact-form-submit{display:block;height:30px;float:left;color:#FFF;padding:0 20px;margin:10px 0 5px;cursor:pointer;background-color:#56585d;box-shadow:0 4px 0 0 #2d2f34;border:1px solid #434446;border-radius:4px;text-shadow:0 1px 0 #37383b;font-weight:bold;}
-#ContactForm1_contact-form-submit:hover{background-color:#4d4f53}
-#ContactForm1_contact-form-submit:active{position:relative;top:2px;box-shadow:0 2px 0 0 #2d2f34}
-#ContactForm1_contact-form-submit:focus{outline:0}
-#ContactForm1_contact-form-error-message,#ContactForm1_contact-form-success-message{width:100%;margin-top:15px}
-.contact-form-button-submit{background-image:none!important;border-color:none!important}
-
-/* CSS Ad block */
-#unblocker{position:fixed;top:0;left:0;width:100%;height:100%;background-color:#fff;opacity:.98;display:block;z-index:9999;overflow:hidden}
-#unblocker p{color:#000;text-align:center;margin:15% auto;font-size:2rem;max-width:750px;display:table;line-height:1.5;}
-#unblocker p:before{content:'\f023';font-family:fontawesome;background:#ff675c;color:#fff;text-align:center;display:block;padding:0;width:2em;height:2em;line-height:2em;font-size:2.5rem;clear:both;border-radius:100%;margin:0 auto 3%;font-weight:normal;box-shadow:inset 0 0 5px rgba(0,0,0,.1)}
-#unblocker p:hover:before{content:'\f13e'}
-#unblocker p a,#unblocker p i{font-size:20px}
-#unblocker ~ *{display:none}
-
-/* Sitemaps */
-#table-outer{padding:7px 10px;margin:0 auto 20px}
-#table-outer table{width:auto;margin:0 auto}
-#table-outer form{font:inherit}
-#table-outer label{display:block;text-align:right;margin:0 10px 0 0;padding:4px 0 0}
-#table-outer select[disabled]{opacity:.4}
-#post-searcher{display:block;margin:0;padding:0}
-#table-outer input{width:100%;border:1px solid #dedede;border-radius:5px;margin:0;padding:5px;text-transform:capitalize!important;outline:0;color:#333!important;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}
-#table-outer select{width:100%;border:1px solid #dedede;border-radius:5px;margin:0 0 5px;padding:5px;text-transform:capitalize!important;outline:0;color:#333!important;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}
-#table-outer select option{min-height:1.4em!important;}
-#table-outer input#feed-q{padding:5px 10px!important;}
-#feed-container{background:#fff;display:block;clear:both;margin:0;padding:0;list-style:none;overflow:hidden;position:relative;border-top:none}
-#feed-container li{list-style:none;margin:0;padding:0;display:inline}
-#feed-container li a{text-decoration:none;color:#2C2C2C;font-weight:bold;font-size:16px}
-#feed-container li a:hover{text-decoration:none;color:#E94141}
-#feed-container li img{margin:0 15px 5px 0;padding:;width:100%!important;height:140px!important;display:block;}
-#feed-nav{margin:10px 0 30px;text-align:center;font-weight:500;width:100%}
-#feed-nav a,#feed-nav span{color:#fff;text-decoration:none;display:block;opacity:.8}
-#feed-nav a:hover,#feed-nav span:hover{opacity:1}
-#feed-nav span{cursor:wait}
-
-/*Popular Posts */
-.PopularPosts .widget-content ul{width:100%;padding:0!important;list-style-type:none}
-.PopularPosts .widget-content ul li{margin:0 0 10px;padding:0 0 10px!important;line-height:1.1em;height:auto;overflow:hidden;border-bottom:1px solid #ddd}
-.PopularPosts .widget-content ul li:last-child{margin:0;padding:0!important;border-bottom:0}
-.PopularPosts .widget-content ul li a{text-decoration:none;color:#bc2929;font-weight:bold}
-.PopularPosts .widget-content ul li a:hover{text-decoration:none;color:#a21e1e;}
-.PopularPosts .item-thumbnail,.PopularPosts .item-content img{display:none}
-.PopularPosts .item-title{padding:0!important;transition:all .3s ease-in-out}
-
-/* Pace Theme Flash */
-.pace,.pace .pace-activity{position:fixed;z-index:2000;top:0;right:0}
-.pace{-webkit-pointer-events:none;pointer-events:none;-webkit-user-select:none;-moz-user-select:none;user-select:none;-webkit-perspective:12rem;-moz-perspective:12rem;-ms-perspective:12rem;-o-perspective:12rem;perspective:12rem;height:6rem;width:6rem;margin:auto;left:0;bottom:0}
-.pace .pace-activity{display:block;width:50px;height:50px;border:3px solid transparent;border-top-color:#bc2929;border-left-color:#bc2929;border-radius:100%;-webkit-animation:pace-spinner .4s linear infinite;-moz-animation:pace-spinner .4s linear infinite;-ms-animation:pace-spinner .4s linear infinite;-o-animation:pace-spinner .4s linear infinite;animation:pace-spinner .4s linear infinite}
-.pace.pace-inactive .pace-activity{display:none}
-@-webkit-keyframes pace-spinner{0%{-webkit-transform:rotate(0);transform:rotate(0)}
-100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300) ;*{box-sizing:border-box;margin:0;padding:0;font-weight:300}body{font-family:'Source Sans Pro',sans-serif;color:#fff;font-weight:300}body ::-webkit-input-placeholder{font-family:'Source Sans Pro',sans-serif;color:#fff;font-weight:300}body :-moz-placeholder{font-family:'Source Sans Pro',sans-serif;color:#fff;opacity:1;font-weight:300}body ::-moz-placeholder{font-family:'Source Sans Pro',sans-serif;color:#fff;opacity:1;font-weight:300}body :-ms-input-placeholder{font-family:'Source Sans Pro',sans-serif;color:#fff;font-weight:300}.wrapper{background:#50a3a2;background:-webkit-linear-gradient(top left,#50a3a2 0%,#53e3a6 100%);background:linear-gradient(to bottom right,#50a3a2 0%,#53e3a6 100%);position:absolute;top:00%;left:0;width:100%;height:100%;overflow:hidden}.wrapper.form-success .container h1{-webkit-transform:translateY(85px);-ms-transform:translateY(85px);transform:translateY(85px)}.container{max-width:600px;margin:0 auto;padding:80px 0;height:400px;text-align:center}.container h1{font-size:40px;-webkit-transition-duration:1s;transition-duration:1s;-webkit-transition-timing-function:ease-in-put;transition-timing-function:ease-in-put;font-weight:200}form{padding:20px 0;position:relative;z-index:2}form input{-webkit-appearance:none;-moz-appearance:none;appearance:none;outline:0;border:1px solid rgba(255,255,255,.4);background-color:rgba(255,255,255,.2);width:250px;border-radius:3px;padding:10px 15px;margin:0 auto 10px auto;display:block;text-align:center;font-size:18px;color:#fff;-webkit-transition-duration:.25s;transition-duration:.25s;font-weight:300}form input:hover{background-color:rgba(255,255,255,.4)}form input:focus{background-color:#fff;width:300px;color:#53e3a6}form button{-webkit-appearance:none;-moz-appearance:none;appearance:none;outline:0;background-color:#fff;border:0;padding:10px 15px;color:#53e3a6;border-radius:3px;width:250px;cursor:pointer;font-size:18px;-webkit-transition-duration:.25s;transition-duration:.25s}form button:hover{background-color:#f5f7f9}.bg-bubbles{position:absolute;top:0;left:0;width:100%;height:100%;z-index:1}.bg-bubbles li{position:absolute;list-style:none;display:block;width:40px;height:40px;background-color:rgba(255,255,255,.15);bottom:-160px;-webkit-animation:square 25s infinite;animation:square 25s infinite;-webkit-transition-timing-function:linear;transition-timing-function:linear}.bg-bubbles li:nth-child(1) {left:10%}.bg-bubbles li:nth-child(2) {left:20%;width:80px;height:80px;-webkit-animation-delay:2s;animation-delay:2s;-webkit-animation-duration:17s;animation-duration:17s}.bg-bubbles li:nth-child(3) {left:25%;-webkit-animation-delay:4s;animation-delay:4s}.bg-bubbles li:nth-child(4) {left:40%;width:60px;height:60px;-webkit-animation-duration:22s;animation-duration:22s;background-color:rgba(255,255,255,.25)}.bg-bubbles li:nth-child(5) {left:70%}.bg-bubbles li:nth-child(6) {left:80%;width:120px;height:120px;-webkit-animation-delay:3s;animation-delay:3s;background-color:rgba(255,255,255,.2)}.bg-bubbles li:nth-child(7) {left:32%;width:160px;height:160px;-webkit-animation-delay:7s;animation-delay:7s}.bg-bubbles li:nth-child(8) {left:55%;width:20px;height:20px;-webkit-animation-delay:15s;animation-delay:15s;-webkit-animation-duration:40s;animation-duration:40s}.bg-bubbles li:nth-child(9) {left:25%;width:10px;height:10px;-webkit-animation-delay:2s;animation-delay:2s;-webkit-animation-duration:40s;animation-duration:40s;background-color:rgba(255,255,255,.3)}.bg-bubbles li:nth-child(10) {left:90%;width:160px;height:160px;-webkit-animation-delay:11s;animation-delay:11s}@-webkit-keyframes square {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  100% {
+    -webkit-transform: translateY(-700px) rotate(600deg);
+            transform: translateY(-700px) rotate(600deg);
+  }
+}@keyframes square {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  100% {
+    -webkit-transform: translateY(-700px) rotate(600deg);
+            transform: translateY(-700px) rotate(600deg);
+  }
 }
-@-moz-keyframes pace-spinner{0%{-moz-transform:rotate(0);transform:rotate(0)}
-100%{-moz-transform:rotate(360deg);transform:rotate(360deg)}
-}
-@-o-keyframes pace-spinner{0%{-o-transform:rotate(0);transform:rotate(0)}
-100%{-o-transform:rotate(360deg);transform:rotate(360deg)}
-}
-@-ms-keyframes pace-spinner{0%{-ms-transform:rotate(0);transform:rotate(0)}
-100%{-ms-transform:rotate(360deg);transform:rotate(360deg)}
-}
-@keyframes pace-spinner{0%{transform:rotate(0)}
-100%{transform:rotate(360deg)}
-}
-
-@media (max-width:1024px){
-.main-box .button-label .btn {padding: 5px 10px;}
-}
-
-@media (max-width:960px){#header,.header-wrapper .col-md-8{text-align:center}
-.header-wrapper form.navbar-left{float:none!important;margin-top:20px}
-.main-box .pull-right.mainbox,.main-box .pull-right.sidebarbox{float:none!important;}
-.post-box{margin-left:15px;margin-right:15px}
-.main-box .col-md-9,.main-box .col-md-4,.main-box .col-md-8,.main-box .col-md-3{width:100%;float:none!important;}
-}
-
-@media screen and (max-width:880px){body{margin-bottom:120px;}.footer>.container .col-md-8{float:left;text-align:left!important;margin-top:10px;}
-}
-
-@media (max-width:603px){#table-outer table{margin:0 auto;width:100%}
-#feed-container,#table-outer{margin:0 auto}
-#feed-container li .inner{margin:5px auto;height:auto;}
-#feedContainer li{float:none;display:block;width:auto;height:auto}
-#feed-container li .news-text, #feedContainer:after,#feed-container li img{display:none!important}
-.navbar-form {border-top:0;border-bottom:0;box-shadow:none}
-.navbar-menu .navbar-header{background-color:#e43131!important;}
-.navbar-menu {margin-top:-50px;}
-.navbar-menu .nav-tabs>li{width:100%;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;box-sizing: border-box;}
-.navbar-menu .navbar-collapse.in {overflow-y:visible}
-.navbar-menu .navbar-collapse {padding-right:0;padding-left:0;border:0;box-shadow:none}
-.navbar-menu .nav-tabs>li {float:none;margin-bottom:0;}
-.navbar-menu .nav-tabs>li.active>a{background-color:#e43131;color:#fff}
-.navbar-menu .nav-tabs>li.active>a:focus,.navbar-menu .nav-tabs>li.active>a:hover {background-color:#bc2929!important;color:#fff!important;border:none!important;}
-.navbar-menu .nav-tabs>li>a {margin-right:0;line-height:1.2em;border:0;border-radius:0}
-.navbar-menu .nav-tabs>li>a:hover,.navbar-menu .nav-tabs>li>a:focus {color:#fff!important;background-color:#bc2929!important;font-size:16px!important}
-.navbar-menu .dropdown-menu{width:100%;z-index:9999}
-.menuikon{display:block;color:#fff;font-weight:bold}
-}
-@media (max-width:375px){#myTabs.nav>li>a {padding:10px;}
-}
-@media (max-width:320px){#myTabs.nav>li>a {padding:7px;font-size:12px!important}
-}
-
-/*]]>*/
-</style>
